# iced_aurora_demo

./: Cargo.toml  aarch64_build.sh  arm_build.sh  deploy.sh
rpm/: com.lmaxyz.IcedAurora.desktop  com.lmaxyz.IcedAurora.spec
src/: main.rs
